@@ -9,6 +9,12 @@
 
 namespace irr
 {
+
+namespace gui
+{
+	class IGUIFont;
+}
+
 namespace scene
 {
 
@@ -25,8 +31,17 @@ public:
 	//! sets the text string
 	virtual void setText(const wchar_t* text) = 0;
 
+	//! get the text string
+	virtual const wchar_t* getText() const = 0;
+
 	//! sets the color of the text
 	virtual void setTextColor(video::SColor color) = 0;
+
+	//! get the color of the text
+	virtual video::SColor getTextColor() const = 0;
+
+	//! Get the font used to draw the text
+	virtual gui::IGUIFont* getFont() const = 0;
 };
 
 } // end namespace scene
